simulation stuff is complete, just need to setup train-test split for GBM calibration

--- a/src/experiment/Update_sim (1).ipynb
+++ b/src/experiment/Update_sim (1).ipynb
@@ -3461,14 +3461,15 @@
     "    plt.show()\n",
     "        \n",
     "    return (fees_collected, hold_val, port_val, tracking)\n",
-    "mu = 0 # Drift coefficient\n",
-    "sigma = 0.25  # Diffusion coefficient\n",
-    "S0 = btc[0]  # Initial value\n",
-    "T = 1.0  # Terminal time\n",
-    "N = 1440  # Number of time steps\n",
-    "dt = T / N  # Time step size\n",
+    "# mu = 0 # Drift coefficient\n",
+    "# sigma = 0.25  # Diffusion coefficient\n",
+    "# S0 = btc[0]  # Initial value\n",
+    "# T = 1.0  # Terminal time\n",
+    "# N = 1440  # Number of time steps\n",
+    "# dt = T / N  # Time step size\n",
     "\n",
-    "trade_environment(AMM, 10, 5, -2, 1998, btc, gbm_path, \"accumulator\", \"triangle\")"
+    "\n",
+    "# trade_environment(AMM, 10, 5, -2, 1998, btc, gbm_path, \"accumulator\", \"triangle\")"
    ]
   },
   {
