--- a/exp/env_test.ipynb
+++ b/exp/env_test.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-13 13:38:49.717700: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-09-24 17:11:37.137968: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00095639]\n"
+      "[0.00343199]\n"
      ]
     }
    ],
@@ -87,38 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trader 0.05 action: [0.00106753 0.32029974]\n",
-      "Trader 0.10 action: [-0.00544575  0.01468608]\n",
-      "Trader 0.15 action: [0.00284768 0.08220658]\n",
-      "Trader 0.20 action: [-0.00622036  0.2688409 ]\n",
-      "Trader 0.25 action: [-0.00061756  0.00022364]\n",
-      "Trader 0.30 action: [3.1333417e-05 6.1305875e-01]\n",
-      "Trader 0.35 action: [0.00065267 0.45480883]\n",
-      "Trader 0.40 action: [0.00074096 0.5401744 ]\n",
-      "Trader 0.45 action: [-0.00100001  0.17963561]\n",
-      "Trader 0.50 action: [-0.00297006  0.20323929]\n",
-      "Trader 0.55 action: [-0.0074639  0.000103 ]\n",
-      "Trader 0.60 action: [0.00108927 0.52671796]\n",
-      "Trader 0.65 action: [0.00319797 0.10924062]\n",
-      "Trader 0.70 action: [-0.00279466  0.5576987 ]\n",
-      "Trader 0.75 action: [0.00058217 0.15177527]\n",
-      "Trader 0.80 action: [0.00112357 0.3733947 ]\n",
-      "Trader 0.85 action: [-0.0001465   0.11509696]\n",
-      "Trader 0.90 action: [5.0414354e-04 6.2220275e-01]\n",
-      "Trader 0.95 action: [-0.00092534  0.00268084]\n",
-      "Trader 1.00 action: [-0.00039848  0.0472129 ]\n"
+      "obs: [1.000294  1.0002931 1.        1.       ]\n"
      ]
     }
    ],
    "source": [
-    "obs, reward, done, truncated, info = env.step([0.05])"
+    "obs, reward, done, truncated, info = env.step([sample_action])\n",
+    "\n",
+    "print(f\"obs: {obs}\")"
    ]
   },
   {
