--- a/exp/env_test.ipynb
+++ b/exp/env_test.ipynb
@@ -26,6 +26,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from collections import deque\n",
+    "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "def run_simulation_for_sigma(set_sigma, num_runs=300):\n",
+    "    annualized_sigmas = []\n",
+    "\n",
+    "    for _ in tqdm(range(num_runs), desc=f\"Set Sigma: {set_sigma}\", leave=False):\n",
+    "        market = MarketSimulator(sigma=set_sigma)\n",
+    "        amm = AMM(fee=0.0005)\n",
+    "        mkt_mid = deque(maxlen=1000)\n",
+    "        log_returns = deque(maxlen=999)\n",
+    "\n",
+    "        sum_log_returns = 0\n",
+    "        sum_log_returns_sq = 0\n",
+    "        window_size = 999\n",
+    "        sigma_values = []\n",
+    "\n",
+    "        for _ in range(market.steps):\n",
+    "            mkt_ask = market.get_ask_price('A')\n",
+    "            mkt_bid = market.get_bid_price('B')\n",
+    "            mid_price = (mkt_ask + mkt_bid) / 2\n",
+    "\n",
+    "            if len(mkt_mid) > 0:\n",
+    "                last_price = mkt_mid[-1]\n",
+    "                log_return = np.log(mid_price / last_price)\n",
+    "\n",
+    "                sum_log_returns += log_return\n",
+    "                sum_log_returns_sq += log_return ** 2\n",
+    "\n",
+    "                log_returns.append(log_return)\n",
+    "\n",
+    "                if len(log_returns) == window_size:\n",
+    "                    oldest_return = log_returns[0]\n",
+    "                    sum_log_returns -= oldest_return\n",
+    "                    sum_log_returns_sq -= oldest_return ** 2\n",
+    "\n",
+    "            mkt_mid.append(mid_price)\n",
+    "\n",
+    "            if len(mkt_mid) == 1000:\n",
+    "                mean_log_return = sum_log_returns / window_size\n",
+    "                variance = (sum_log_returns_sq / window_size) - (mean_log_return ** 2)\n",
+    "                current_sigma = np.sqrt(variance)\n",
+    "                sigma_values.append(current_sigma)\n",
+    "\n",
+    "            market.next()\n",
+    "\n",
+    "        sigma_mean = np.mean(sigma_values)\n",
+    "        annualized_sigma = sigma_mean * np.sqrt(252 * 6.5 * 60)\n",
+    "        annualized_sigmas.append(annualized_sigma)\n",
+    "\n",
+    "    return set_sigma, annualized_sigmas\n",
+    "\n",
+    "def collect_data_for_sigmas(sigma_values):\n",
+    "    boxplot_data = {}\n",
+    "    sigma_means = {}\n",
+    "    with ProcessPoolExecutor() as executor:\n",
+    "        futures = {executor.submit(run_simulation_for_sigma, sigma): sigma for sigma in sigma_values}\n",
+    "\n",
+    "        for future in as_completed(futures):\n",
+    "            sigma, annualized_sigmas = future.result()\n",
+    "            boxplot_data[sigma] = annualized_sigmas\n",
+    "            sigma_means[sigma] = np.mean(annualized_sigmas)\n",
+    "\n",
+    "    return boxplot_data, sigma_means\n",
+    "\n",
+    "# Define the sigma values to set\n",
+    "sigma_values = np.round(np.arange(0.05, 0.36, 0.01), 3)\n",
+    "\n",
+    "# Collect data for all sigma values using parallel processing\n",
+    "boxplot_data, sigma_means = collect_data_for_sigmas(sigma_values)\n",
+    "\n",
+    "# Prepare data for the boxplot\n",
+    "data = [boxplot_data[sigma] for sigma in sigma_values]\n",
+    "\n",
+    "# Plotting the boxplot\n",
+    "plt.figure(figsize=(15, 8))\n",
+    "plt.boxplot(data, labels=[f'{s:.2f}' for s in sigma_values])\n",
+    "plt.title(\"Boxplot of Annualized Sigma Values for Different Set Sigmas\", fontsize=16)\n",
+    "plt.xlabel(\"Set Sigma\", fontsize=14)\n",
+    "plt.ylabel(\"Annualized Sigma (Volatility)\", fontsize=14)\n",
+    "plt.grid(True)\n",
+    "plt.savefig(\"sigma-boxplot.png\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Prepare data for linear regression\n",
+    "set_sigma_array = np.array(list(sigma_means.keys())).reshape(-1, 1)\n",
+    "mean_annualized_sigma_array = np.array(list(sigma_means.values())).reshape(-1, 1)\n",
+    "\n",
+    "# Fit the linear regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(set_sigma_array, mean_annualized_sigma_array)\n",
+    "\n",
+    "# Extract the coefficient and intercept\n",
+    "coefficient = model.coef_[0][0]\n",
+    "intercept = model.intercept_[0]\n",
+    "\n",
+    "# Predict the values and calculate R-squared\n",
+    "predicted_annualized_sigma = model.predict(set_sigma_array)\n",
+    "r_squared = model.score(set_sigma_array, mean_annualized_sigma_array)\n",
+    "\n",
+    "# Plot the linear regression\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(set_sigma_array, mean_annualized_sigma_array, color='blue', label='Mean Annualized Sigma')\n",
+    "plt.plot(set_sigma_array, predicted_annualized_sigma, color='red', linewidth=2, label=f'Linear Fit (R² = {r_squared:.4f})\\nCoef: {coefficient:.4f}, Intercept: {intercept:.4f}')\n",
+    "plt.title(\"Linear Regression of Set Sigma vs Mean Annualized Sigma\", fontsize=16)\n",
+    "plt.xlabel(\"Set Sigma\", fontsize=14)\n",
+    "plt.ylabel(\"Mean Annualized Sigma\", fontsize=14)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig(\"linear-regression-sigma.png\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
