--- a/exp/dummy_display.ipynb
+++ b/exp/dummy_display.ipynb
@@ -29,17 +29,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import glob\n",
     "\n",
-    "file_path = '/home/shiftpub/Dynamic_AMM/results/dummy_results/sp500_simulation_result_second.csv'\n",
-    "results = pd.read_csv(file_path)\n",
-    "unique_fee_rate = results['fee_rate'].unique()"
+    "# import all csv files and concatenate them into one dataframe\n",
+    "path = '/home/shiftpub/Dynamic_AMM/results/dummy_results/'\n",
+    "all_files = glob.glob(path + \"/*.csv\")\n",
+    "li = []\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, index_col=None, header=0)\n",
+    "    li.append(df)\n",
+    "df = pd.concat(li, axis=0, ignore_index=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
