--- a/inf_step_exp/mc_approach/crazy.ipynb
+++ b/inf_step_exp/mc_approach/crazy.ipynb
@@ -234,11 +234,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import socket\n",
     "\n",
-    "seed = 1\n",
-    "# generate 10 integers \n",
-    "np.random.RandomState(seed).randint(0, 2**32, size=10)"
+    "socket.gethostname()"
    ]
   }
  ],
